*SVN*

* Update tests' use of fixtures for the new collections api.  #8726 [kamal]

* Save associated records only if the association is already loaded.  #8713 [blaine]

* MySQL: fix show_variable.  #8448 [matt, Jeremy Kemper]

* Fixtures: correctly delete and insert fixtures in a single transaction.  #8553 [Michael Schuerig]

* Fixtures: people(:technomancy, :josh) returns both fixtures.  #7880 [technomancy, Josh Peek]

* Calculations support non-numeric foreign keys.  #8154 [kamal]

* with_scope is protected.  #8524 [Josh Peek]

* Quickref for association methods.  #7723 [marclove, Mindsweeper]

* Calculations: return nil average instead of 0 when there are no rows to average.  #8298 [davidw]

* acts_as_nested_set: direct_children is sorted correctly.  #4761 [Josh Peek, rails@33lc0.net]

* Raise an exception if both attr_protected and attr_accessible are declared.  #8507 [stellsmi]

* SQLite, MySQL, PostgreSQL, Oracle: quote column names in column migration SQL statements.  #8466 [marclove, lorenjohnson]

* Allow nil serialized attributes with a set class constraint.  #7293 [sandofsky]

* Oracle: support binary fixtures.  #7987 [Michael Schoen]

* Fixtures: pull fixture insertion into the database adapters.  #7987 [Michael Schoen]

* Announce migration versions as they're performed.  [Jeremy Kemper]

* find gracefully copes with blank :conditions.  #7599 [Dan Manges, johnnyb]

* validates_numericality_of takes :greater_than, :greater_than_or_equal_to, :equal_to, :less_than, :less_than_or_equal_to, :odd, and :even options.  #3952 [Bob Silva, Dan Kubb, Josh Peek]

* MySQL: create_database takes :charset and :collation options. Charset defaults to utf8.  #8448 [matt]

* Find with a list of ids supports limit/offset.  #8437 [hrudududu]

* Optimistic locking: revert the lock version when an update fails.  #7840 [plang]

* Migrations: add_column supports custom column types.  #7742 [jsgarvin, Theory]
